<resources>
    <string name="app_name">HanshinInfo</string>

    <!--Main-->
    <string name="map_page">학교지도</string>
    <string name="notification">공지사항</string>
    <string name="notice_notification">공지사항</string>
    <string name="notice_event">행사공지</string>
    <string name="notice_academic">학사공지</string>
    <string name="notice_scholarship_community">장학/사회봉사</string>
    <string name="notice_employment">취업공지</string>
    <string name="schedule_page">학사일정</string>
    <string name="num_page">전화번호</string>
    <string name="uni_number">교내 전화번호</string>
    <string name="prof_number">교수 전화번호</string>
    <string name="town_page">주변상권</string>
    <string name="mascot_page">마스코트</string>
    <string name="mascot_cu_o">쿠오 (KU-O)</string>
    <string name="mascot_hangomi">한고미 (HANGOMI)</string>
    <string name="mascot_buzzi">버지 (BUZZI)</string>
    <string name="mascot_hanggu">한꾸 (HANGGU)</string>

    <!--Menu Connect Link-->
    <string name="homepage">학교 홈페이지</string>
    <string name="lms">lms</string>
    <string name="hsctis">한신종합정보</string>
    <string name="attend">전자출결</string>
    <string name="sugang">수강신청</string>

    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="next_month">Sat</string>
    <string name="previous_month">Sat</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="delete_schedule">Delete Schedule</string>

    <!--Number info-->
    <string name="num_aff">소속</string>
    <string name="num_subaff">세부 소속</string>
    <string name="num_office">호실</string>
    <string name="num_name">이름</string>
    <string name="num_number">전화번호</string>
    <!-- 시간 슬롯 배열 -->
    <string-array name="time_slots">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

</resources>