<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/fragment_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_map"
            android:title="@string/map_page"
            android:checkable="true"
            android:checked="true"/>

        <item
            android:id="@+id/menu_schedule"
            android:title="@string/schedule_page"
            android:checkable="true"
            android:checked="false"/>

        <item
            android:id="@+id/menu_university_number"
            android:title="@string/num_page"
            android:checkable="true"
            android:checked="false"/>

        <item
            android:id="@+id/menu_town_info"
            android:title="@string/town_page"
            android:checkable="true"
            android:checked="false"/>
    </group>

    <group
        android:id="@+id/link_group">
        <item
            android:id="@+id/menu_homepage"
            android:title="@string/homepage"
            android:checkable="false"
            android:checked="false"/>

        <item
            android:id="@+id/menu_lms"
            android:title="@string/lms"
            android:checkable="false"
            android:checked="false"/>

        <item
            android:id="@+id/menu_hsctis"
            android:title="@string/hsctis"
            android:checkable="false"
            android:checked="false"/>

        <item
            android:id="@+id/menu_attend"
            android:title="@string/attend"
            android:checkable="false"
            android:checked="false"/>

        <item
            android:id="@+id/menu_sugang"
            android:title="@string/sugang"
            android:checkable="false"
            android:checked="false"/>
    </group>

</menu>