<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/sub_bgColor">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/num_aff"
                    style="@style/numberDetailStyle"/>

                <TextView
                    android:id="@+id/detail_aff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_marginStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subaff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/num_subaff"
                    style="@style/numberDetailStyle"/>

                <TextView
                    android:id="@+id/detail_subaff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_marginStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/num_name"
                    style="@style/numberDetailStyle"/>

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/num_office"
                    style="@style/numberDetailStyle"/>

                <TextView
                    android:id="@+id/detail_office"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_marginStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/num_number"
                    style="@style/numberDetailStyle"/>

                <TextView
                    android:id="@+id/detail_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_marginStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
